<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/desiredleaguebg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.987"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp"
            app:srcCompat="@drawable/swooshlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2" android:scaleType="fitCenter"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="188dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="16dp"
            android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MensLeagueBtn"
                android:textOff="@string/mens"
                android:textOn="@string/mens"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle"
                tools:background="@drawable/swoosh_button_checked" android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/womensLeagueBtn"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorAccent"
                android:textOff="@string/womens"
                android:textOn="@string/womens"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:onClick="onWomensClicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coedLeagueBtn"
                android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/leagueNextBtn" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:onClick="leagueNextClicked"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.341"/>
</android.support.constraint.ConstraintLayout>